--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,15 @@ Django==1.7.1
 Pillow==2.7.0
 PyJWT==0.4.1
 argparse==1.2.1
+dj-database-url==0.3.0
+gunicorn==19.3.0
 oauthlib==0.7.2
 python-openid==2.2.5
 python-social-auth==0.2.1
 requests==2.5.1
 requests-oauthlib==0.4.2
 six==1.9.0
+whitenoise==1.0.6
 wsgiref==0.1.2
+psycopg2==2.5.4
 
