added dj-static to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Pillow==2.7.0
 PyJWT==0.4.1
 argparse==1.2.1
 dj-database-url==0.3.0
+dj-static==0.0.6
 gunicorn==19.3.0
 oauthlib==0.7.2
 python-openid==2.2.5
@@ -10,6 +11,7 @@ python-social-auth==0.2.1
 requests==2.5.1
 requests-oauthlib==0.4.2
 six==1.9.0
+static3==0.5.1
 whitenoise==1.0.6
 wsgiref==0.1.2
 psycopg2==2.5.4
